[package]
name = "mm"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = {  version = "0.61.2", features = ["Win32_Foundation"
    , "Win32_System_Threading"
    , "Win32_System_ProcessStatus"
    , "Win32_System_Diagnostics"
    , "Win32_System_Memory"
    , "Win32_Security"
    , "Win32_System_WindowsProgramming"

] }

thiserror = "2.0.17"
log = "0.4.29"